Version 2.2.1 - ???
----------
2008-03-??

	Bas Zoetekouw:
		* Patch for debian bug #350396: "amule depletes entropy pool".

	brainnolo:
		* Patch for loading the correct path for the UPnP libraries
		  in Mac.
		* Added the binaries for libUPnP for Mac to the directory
		  aMule.app/Contents/Frameworks.
		* Universal Binary ed2kHelperScript update.
		* avoid removing libupnp libs during initial cleanup
		  (this would defeat bundling them) . It will now remove only
		  libwx in the Frameworks directory (which are supposed to be
		  from an old build).

	centaur:
		* OpenBSD patch.

	Coronas:
		* Patch to show kad status in amuleweb (Bug 1103)
		* typo in src/webserver/default/shared.php

	drkirkby:
		* Test for gcc before including gcc specific flags on the
		  compiler line.

	DLH:
		* amulegui.xpm icon.

	EastWind:
		* Patch to prevent overwriting of GDLIB_LIBS

	Gerd78:
		* Added autostart-xas to rpm .spec files.
		* Patch for autoconf >= 2.60.
		* Patch for redefinition of $(docdir) in docs/Makefile.am.
		* Patch for aMule .desktop files.
		* Added amulegui desktop icon (with Vollstrecker).
		* Patch for fixing aMule spec file in Fedora and Mandriva.
		* Test for perl File::Copy in configure.
		* Fix for building with _FORTIFY_SOURCE.

	Gnucco:
		* Workaround for string serialization bug.
		* Workaround for aMule does not publish new files on kad.

	GonoszTopi:
		* Added ability to compile amulecmd without thread support in wx.
		* Fixed source seeds handling on startup.
		* Proper restoration of startup locale after checking available
		  locales.
		* Fixed linkage with wxMSW.
		* Got rid of a few more warnings.
		* Fixed #929: configure: BUILD_CC uses CC's CFLAGS
		* Implemented #962: don't display (0) when not downloading from source
		* Fixed #954 - added ability turn IPFilter on/off for servers/clients
		  independently.
		* Added support for magnet ed2k links.
		* Improve cross compilation
		* Fixed segmentation fault in amuled